--- a/scripts/EDA_audio.ipynb
+++ b/scripts/EDA_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "revolutionary-moderator",
+   "id": "printable-grill",
    "metadata": {},
    "source": [
     "## Load data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "million-canberra",
+   "id": "olympic-agenda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "continental-montgomery",
+   "id": "alpha-armstrong",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "outside-scholar",
+   "id": "compact-agenda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "preceding-retreat",
+   "id": "efficient-impact",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "pointed-hypothesis",
+   "id": "adult-maple",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "demographic-loading",
+   "id": "specified-honduras",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "federal-today",
+   "id": "celtic-starter",
    "metadata": {},
    "source": [
     "## EDA"
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "becoming-google",
+   "id": "front-business",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "billion-quest",
+   "id": "dramatic-convention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "homeless-cement",
+   "id": "unlimited-rugby",
    "metadata": {},
    "outputs": [
     {
@@ -6338,7 +6338,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "million-major",
+   "id": "referenced-survivor",
    "metadata": {},
    "outputs": [
     {
@@ -6362,7 +6362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crude-checklist",
+   "id": "forty-driver",
    "metadata": {},
    "source": [
     "## Get CSVs"
@@ -6370,8 +6370,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "amino-composite",
+   "execution_count": 4,
+   "id": "dedicated-beauty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6381,8 +6381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ordinary-windsor",
+   "execution_count": 5,
+   "id": "funny-vermont",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6408,15 +6408,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "bound-karaoke",
+   "execution_count": 6,
+   "id": "second-luxury",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9988/9988 [00:00<00:00, 1338040.45it/s]\n"
+      "100%|██████████| 9988/9988 [00:00<00:00, 1136628.28it/s]\n"
      ]
     }
    ],
@@ -6426,15 +6426,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "adult-minority",
+   "execution_count": 7,
+   "id": "active-modeling",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1112/1112 [00:00<00:00, 789315.63it/s]\n"
+      "100%|██████████| 1112/1112 [00:00<00:00, 1312712.09it/s]\n"
      ]
     }
    ],
@@ -6444,8 +6444,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "offshore-advocacy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2747/2747 [00:00<00:00, 1008203.81it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "json2csv('test', test_dir, audio_dir + '/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "administrative-stage",
+   "id": "copyrighted-housing",
    "metadata": {},
    "outputs": [],
    "source": []
