--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "parliamentary-potato",
+   "id": "dirty-ticket",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Mar  8 14:13:00 2021       \n",
+      "Mon Mar  8 14:59:57 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 450.102.04   Driver Version: 450.102.04   CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -19,7 +19,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   51C    P8    N/A /  N/A |    923MiB /  4042MiB |      3%      Default |\n",
+      "| N/A   49C    P3    N/A /  N/A |   1875MiB /  4042MiB |      2%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -29,10 +29,11 @@
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
       "|    0   N/A  N/A      1392      G   /usr/lib/xorg/Xorg                 80MiB |\n",
-      "|    0   N/A  N/A      6779      G   /usr/lib/xorg/Xorg                191MiB |\n",
-      "|    0   N/A  N/A      6966      G   /usr/bin/gnome-shell              166MiB |\n",
-      "|    0   N/A  N/A      8131      G   ...AAAAAAAAA= --shared-files      134MiB |\n",
-      "|    0   N/A  N/A     10103      G   ...AAAAAAAA== --shared-files      341MiB |\n",
+      "|    0   N/A  N/A      6779      G   /usr/lib/xorg/Xorg                175MiB |\n",
+      "|    0   N/A  N/A      6966      G   /usr/bin/gnome-shell              171MiB |\n",
+      "|    0   N/A  N/A      8131      G   ...AAAAAAAAA= --shared-files      245MiB |\n",
+      "|    0   N/A  N/A     10103      G   ...AAAAAAAA== --shared-files      249MiB |\n",
+      "|    0   N/A  N/A     13621      C   ...e/kvu/erc/venv/bin/python      943MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -44,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "intellectual-skating",
+   "id": "fuzzy-audio",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "romance-permission",
+   "id": "documented-education",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "favorite-olive",
+   "execution_count": 4,
+   "id": "vietnamese-toner",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
      "text": [
       "{ 'dataset': { 'train': { 'args': { 'csv_path': 'data/MELD/raw-audios/train.csv',\n",
       "                                    'data_dir': 'data/MELD/raw-audios-wav/train/',\n",
-      "                                    'duration': 4,\n",
+      "                                    'duration': 8,\n",
       "                                    'format': '.wav',\n",
       "                                    'is_train': True,\n",
       "                                    'n_mels': 128,\n",
@@ -88,7 +89,7 @@
       "                          'name': 'AudioDataset'},\n",
       "               'val': { 'args': { 'csv_path': 'data/MELD/raw-audios/val.csv',\n",
       "                                  'data_dir': 'data/MELD/raw-audios-wav/val/',\n",
-      "                                  'duration': 4,\n",
+      "                                  'duration': 8,\n",
       "                                  'format': '.wav',\n",
       "                                  'is_train': False,\n",
       "                                  'n_mels': 128,\n",
@@ -115,7 +116,38 @@
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      " 35%|██████████████                          | 876/2497 [03:37<06:20,  4.26it/s]"
+      "100%|███████████████████████████████████████| 2497/2497 [15:22<00:00,  2.71it/s]\n",
+      "+ Training result\n",
+      "Loss: 1.64962980825518\n",
+      "F1 weighted: 0.5498314829133091\n",
+      "Evaluating........\n",
+      "100%|█████████████████████████████████████████| 277/277 [01:00<00:00,  4.59it/s]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.6674511368093938\n",
+      "F1 weighted: 0.5681533539124909\n",
+      "-----------------------------------\n",
+      "Loss is improved from  inf to  1.667451. Saving weights...\n",
+      "F1Weighted is improved from  0.000000 to  0.568153. Saving weights...\n",
+      "\n",
+      "Epoch   1\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      " 14%|█████▊                                  | 359/2497 [01:59<12:32,  2.84it/s]^C\n",
+      " 14%|█████▊                                  | 359/2497 [02:00<11:54,  2.99it/s]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"train.py\", line 120, in <module>\n",
+      "    train(config)\n",
+      "  File \"train.py\", line 93, in train\n",
+      "    val_dataloader=val_dataloader)\n",
+      "  File \"./libs/workers/trainer.py\", line 187, in train\n",
+      "    self.train_epoch(epoch=epoch, dataloader=train_dataloader)\n",
+      "  File \"./libs/workers/trainer.py\", line 110, in train_epoch\n",
+      "    torch.nn.utils.clip_grad_norm_(self.model.parameters(), self.max_grad_norm)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/nn/utils/clip_grad.py\", line 40, in clip_grad_norm_\n",
+      "    p.grad.detach().mul_(clip_coef.to(p.grad.device))\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/tensor.py\", line 947, in grad\n",
+      "    if self.requires_grad and not hasattr(self, \"retains_grad\") and not self.is_leaf and self._grad is None:\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
@@ -125,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solar-avenue",
+   "id": "outstanding-sheffield",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -133,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "adolescent-wesley",
+   "execution_count": 5,
+   "id": "impossible-floor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,10 +176,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "useful-perth",
+   "execution_count": 6,
+   "id": "martial-exclusion",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 11893), started 2:08:23 ago. (Use '!kill 11893' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-b43257378529da83\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b43257378529da83\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%tensorboard --logdir=runs/"
    ]
@@ -155,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sealed-skating",
+   "id": "indian-cabin",
    "metadata": {},
    "outputs": [],
    "source": []
