add: random offset

--- a/scripts/EDA_audio.ipynb
+++ b/scripts/EDA_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "printable-grill",
+   "id": "cognitive-cuisine",
    "metadata": {},
    "source": [
     "## Load data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "olympic-agenda",
+   "id": "laden-wildlife",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "alpha-armstrong",
+   "id": "magnetic-butler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "compact-agenda",
+   "id": "owned-stretch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "efficient-impact",
+   "id": "statewide-commerce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "adult-maple",
+   "id": "informative-october",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "specified-honduras",
+   "id": "decimal-webmaster",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-starter",
+   "id": "incorporate-intention",
    "metadata": {},
    "source": [
     "## EDA"
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "front-business",
+   "id": "dense-launch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dramatic-convention",
+   "id": "fifteen-julian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "unlimited-rugby",
+   "id": "governing-community",
    "metadata": {},
    "outputs": [
     {
@@ -6338,7 +6338,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "referenced-survivor",
+   "id": "endless-thesis",
    "metadata": {},
    "outputs": [
     {
@@ -6362,7 +6362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forty-driver",
+   "id": "guided-banks",
    "metadata": {},
    "source": [
     "## Get CSVs"
@@ -6371,7 +6371,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dedicated-beauty",
+   "id": "lined-decrease",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6382,13 +6382,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "funny-vermont",
+   "id": "impressed-impact",
    "metadata": {},
    "outputs": [],
    "source": [
     "def json2csv(phase, audio_dir, csv_path):\n",
     "    row_list = []\n",
-    "    row_list.append(['audio_id', 'label'])\n",
+    "    row_list.append(['audio_id', 'label', 'duration'])\n",
     "    labels = dataset_json[phase]\n",
     "    for audio_name in tqdm(os.listdir(audio_dir)):\n",
     "        audio_id = audio_name[:-4]\n",
@@ -6398,8 +6398,11 @@
     "            \n",
     "        label = labels[audio_id]\n",
     "        \n",
+    "        y, sr = lb.load(os.path.join(audio_dir, audio_name), sr=None)\n",
+    "        dur = lb.get_duration(y, sr)\n",
+    "        \n",
     "        if label in classes_filter:\n",
-    "            row_list.append([audio_id, classes_mapping[label]])\n",
+    "            row_list.append([audio_id, classes_mapping[label], dur])\n",
     "            \n",
     "    with open(csv_path, 'w', newline='') as f:\n",
     "        writer = csv.writer(f, delimiter=',')\n",
@@ -6409,14 +6412,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "second-luxury",
+   "id": "regional-increase",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9988/9988 [00:00<00:00, 1136628.28it/s]\n"
+      "100%|██████████| 9988/9988 [03:31<00:00, 47.16it/s]\n"
      ]
     }
    ],
@@ -6427,7 +6430,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "active-modeling",
+   "id": "varying-employer",
    "metadata": {},
    "outputs": [
     {
@@ -6445,7 +6448,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "offshore-advocacy",
+   "id": "brazilian-government",
    "metadata": {},
    "outputs": [
     {
@@ -6463,7 +6466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "copyrighted-housing",
+   "id": "confused-building",
    "metadata": {},
    "outputs": [],
    "source": []
