--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cleared-simulation",
+   "id": "sound-democrat",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "above-priority",
+   "id": "coordinate-survey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "atmospheric-albert",
+   "id": "intermediate-undergraduate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,17 +67,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "understood-status",
+   "execution_count": 4,
+   "id": "identified-trainer",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ 'dataset': { 'train': { 'args': { 'csv_path': 'data/MELD/raw-audios-wav/train.csv',\n",
+      "                                    'data_dir': 'data/MELD/raw-audios-wav/train/',\n",
+      "                                    'duration': 6,\n",
+      "                                    'format': '.wav',\n",
+      "                                    'is_train': True,\n",
+      "                                    'n_mels': 128,\n",
+      "                                    'sr': 22050},\n",
+      "                          'loader': { 'args': { 'batch_size': 4,\n",
+      "                                                'drop_last': True,\n",
+      "                                                'shuffle': True},\n",
+      "                                      'name': 'DataLoader'},\n",
+      "                          'name': 'AudioDataset'},\n",
+      "               'val': { 'args': { 'csv_path': 'data/MELD/raw-audios-wav/val.csv',\n",
+      "                                  'data_dir': 'data/MELD/raw-audios-wav/val/',\n",
+      "                                  'duration': 6,\n",
+      "                                  'format': '.wav',\n",
+      "                                  'is_train': False,\n",
+      "                                  'n_mels': 128,\n",
+      "                                  'sr': 22050},\n",
+      "                        'loader': { 'args': { 'batch_size': 4,\n",
+      "                                              'drop_last': True,\n",
+      "                                              'shuffle': True},\n",
+      "                                    'name': 'DataLoader'},\n",
+      "                        'name': 'AudioDataset'}},\n",
+      "  'debug': False,\n",
+      "  'gpus': '0',\n",
+      "  'id': 'audio_effnet',\n",
+      "  'loss': { 'args': {'alpha': 0.25, 'gamma': 2, 'reduce': True},\n",
+      "            'name': 'FocalLoss'},\n",
+      "  'metric': [{'args': None, 'name': 'F1Weighted'}],\n",
+      "  'model': { 'args': { 'freeze_backbone': False,\n",
+      "                       'from_pretrained': True,\n",
+      "                       'name': 'tf_efficientnet_b0_ns',\n",
+      "                       'num_classes': 7},\n",
+      "             'name': 'BaseTimmModel'},\n",
+      "  'optimizer': {'args': {'lr': 1e-05}, 'name': 'Adam'},\n",
+      "  'pretrained': None,\n",
+      "  'scheduler': { 'args': {'gamma': 0.2, 'last_epoch': -1, 'step_size': 3},\n",
+      "                 'name': 'StepLR'},\n",
+      "  'trainer': {'log_step': 1, 'nepochs': 10, 'val_step': 1}}\n",
+      "\n",
+      "Epoch   0\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "  1%|▌                                        | 31/2497 [00:20<20:53,  1.97it/s]^C\n",
+      "  1%|▌                                        | 31/2497 [00:22<29:28,  1.39it/s]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"train.py\", line 120, in <module>\n",
+      "    train(config)\n",
+      "  File \"train.py\", line 93, in train\n",
+      "    val_dataloader=val_dataloader)\n",
+      "  File \"./libs/workers/trainer.py\", line 187, in train\n",
+      "    self.train_epoch(epoch=epoch, dataloader=train_dataloader)\n",
+      "  File \"./libs/workers/trainer.py\", line 113, in train_epoch\n",
+      "    self.scaler.step(self.optimizer)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/cuda/amp/grad_scaler.py\", line 321, in step\n",
+      "    retval = optimizer.step(*args, **kwargs)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/optim/lr_scheduler.py\", line 67, in wrapper\n",
+      "    return wrapped(*args, **kwargs)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/autograd/grad_mode.py\", line 26, in decorate_context\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/optim/adam.py\", line 84, in step\n",
+      "    state = self.state[p]\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/tensor.py\", line 598, in __hash__\n",
+      "    from torch.overrides import has_torch_function, handle_torch_function\n",
+      "  File \"<frozen importlib._bootstrap>\", line 997, in _handle_fromlist\n",
+      "KeyboardInterrupt\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 train.py --config configs/MELD_audio_effnet.yaml --gpus 0 "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "molecular-stupid",
+   "id": "suburban-theology",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -85,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "massive-typing",
+   "execution_count": 5,
+   "id": "accessory-alberta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,10 +170,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "floral-container",
+   "execution_count": 6,
+   "id": "controversial-identity",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-1de369bba22a5d8b\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-1de369bba22a5d8b\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%tensorboard --logdir=runs/"
    ]
@@ -107,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hollow-replica",
+   "id": "distinct-there",
    "metadata": {},
    "outputs": [],
    "source": []
